[AXON-1298] Fix tool calls overflowing the Rovo Dev chat (#1092)

--- a/src/react/atlascode/rovo-dev/RovoDev.css
+++ b/src/react/atlascode/rovo-dev/RovoDev.css
@@ -174,6 +174,11 @@ body {
     cursor: not-allowed;
 }
 
+.rovoDevChat pre > code {
+    text-wrap: wrap;
+    overflow-wrap: break-word;
+}
+
 .code-changes-container {
     display: flex;
     flex-direction: column;
